--- a/index.html
+++ b/index.html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alex's Art Portfolio - Welcome to my World!</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="container">
+        <div class="lang-switcher">
+            <button class="lang-btn"><span class="lang-flag">🇫🇷</span> French</button>
+            <div class="lang-dropdown">
+                <div class="lang-option" onclick="changeLang('🇫🇷', 'French')"><span class="lang-flag">🇫🇷</span>
+                    French (France)</div>
+                <div class="lang-option" onclick="changeLang('🇬🇧', 'English')"><span class="lang-flag">🇬🇧</span>
+                    English (England)</div>
+                <div class="lang-option" onclick="changeLang('🇲🇽', 'Spanish')"><span class="lang-flag">🇲🇽</span>
+                    Spanish (Mexico)</div>
+                <div class="lang-option" onclick="changeLang('🇭🇹', 'Creole')"><span class="lang-flag">🇭🇹</span>
+                    Haitian Creole (Haiti)</div>
+                <div class="lang-option" onclick="changeLang('⚜️', 'Joual')"><span class="lang-flag">⚜️</span> Joual
+                    (Quebec)</div>
+                <div class="lang-option" onclick="changeLang('🇨🇦', 'Acadian')"><span class="lang-flag">🇨🇦</span>
+                    Acadian (Canada)</div>
+            </div>
+        </div>
+
+        <script>
+            function changeLang(flag, name) {
+                document.querySelector('.lang-btn').innerHTML = `<span class="lang-flag">${flag}</span> ${name}`;
+                // Future implementation for real translations can be triggered here
+            }
+        </script>
         <header>
             <h1>Alex's Artistic Portfolio</h1>
             <p><i>Celebrating Beauty through Paint, Pencil, and Lens</i></p>
@@ -20,31 +46,35 @@
         </header>
 
         <div class="marquee-container">
-            <marquee scrollamount="5">*** WELCOME TO MY NEW PORTFOLIO SITE! STAY AWHILE AND BROWSE THE GALLERIES *** UPDATED: FEB 2026 ***</marquee>
+            <marquee scrollamount="5">*** WELCOME TO MY NEW PORTFOLIO SITE! STAY AWHILE AND BROWSE THE GALLERIES ***
+                UPDATED: FEB 2026 ***</marquee>
         </div>
 
         <div class="content">
             <aside class="sidebar">
                 <h3>About Me</h3>
-                <p>Hello! I am Alex, an artist based in the city. I love capturing the essence of life in all its forms.</p>
+                <p>Hello! I am Alex, an artist based in the city. I love capturing the essence of life in all its forms.
+                </p>
                 <hr>
                 <h3>Status</h3>
                 <p>Currently: <b>Available for Commissions!</b></p>
-                <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHJqNGp4ZzRnd3NqZzRnd3NqZzRnd3NqZzRnd3NqZzRnd3NqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/3o7TKMGpxP5OqPxF8Q/giphy.gif" alt="Under Construction" style="width: 100px;">
+                <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHJqNGp4ZzRnd3NqZzRnd3NqZzRnd3NqZzRnd3NqZzRnd3NqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/3o7TKMGpxP5OqPxF8Q/giphy.gif"
+                    alt="Under Construction" style="width: 100px;">
                 <p><small>Site under construction!</small></p>
             </aside>
 
             <main class="main-content">
                 <h2>Welcome to my digital gallery!</h2>
-                <p>This website is a collection of my favorite works. I specialize in traditional painting, charcoal drawing, and urban photography.</p>
-                
+                <p>This website is a collection of my favorite works. I specialize in traditional painting, charcoal
+                    drawing, and urban photography.</p>
+
                 <div class="gallery-item" style="max-width: 400px; margin: 20px auto;">
                     <img src="painting_abstract_pastel_1770727576366.png" alt="Featured Work: Abstract Pastel">
                     <p align="center"><i>Featured: "Morning Dreams" (Oil on Canvas)</i></p>
                 </div>
 
                 <p>Feel free to look around! Every image tells a different story.</p>
-                
+
                 <h3>Project Highlights:</h3>
                 <ul>
                     <li>The Street Life - A deep dive into urban chaos.</li>
@@ -61,4 +91,5 @@
         </footer>
     </div>
 </body>
+
 </html>
