fix: remaining i18n attributes in index.html

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 </p>
                 <hr>
                 <h3 data-i18n="sidebar_status_title">Status</h3>
-                <p>Currently: <b>Available for Commissions!</b></p>
+                <p><span data-i18n="sidebar_status_available">Available for Commissions!</span></p>
                 <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHJqNGp4ZzRnd3NqZzRnd3NqZzRnd3NqZzRnd3NqZzRnd3NqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/3o7TKMGpxP5OqPxF8Q/giphy.gif"
                     alt="Under Construction" style="width: 100px;">
-                <p><small>Site under construction!</small></p>
+                <p><small data-i18n="sidebar_construction">Site under construction!</small></p>
             </aside>
 
             <main class="main-content">
