--- a/photography.html
+++ b/photography.html
@@ -7,6 +7,7 @@
     <title data-i18n="photo_title">Photography Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="js/i18n.js" defer></script>
+    <script src="js/router.js" defer></script>
 </head>
 
 <body>
