--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
                 <p data-i18n="sidebar_about_text">Hello! I am Alex, an artist based in the city. I love capturing the
                     essence of life in all its forms.
                 </p>
+                <h3 data-i18n="sidebar_links_title">Links</h3>
+                <ul>
+                    <li><a href="https://github.com/mtldev514" target="_blank" data-i18n="sidebar_github">My GitHub</a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/in/alexcatus/?locale=fr_FR" target="_blank"
+                            data-i18n="sidebar_linkedin">My LinkedIn</a></li>
+                </ul>
                 <hr>
                 <h3 data-i18n="sidebar_status_title">Status</h3>
                 <p><span data-i18n="sidebar_status_available">Available for Commissions!</span></p>
