feat: add social icons to sidebar

--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
                     essence of life in all its forms.
                 </p>
                 <h3 data-i18n="sidebar_links_title">Links</h3>
-                <ul>
-                    <li><a href="https://github.com/mtldev514" target="_blank" data-i18n="sidebar_github">My GitHub</a>
+                <ul class="social-links">
+                    <li><a href="https://github.com/mtldev514" target="_blank"><i class="fa fa-github"></i> <span
+                                data-i18n="sidebar_github">My GitHub</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/alexcatus/?locale=fr_FR" target="_blank"><i
+                                class="fa fa-linkedin"></i> <span data-i18n="sidebar_linkedin">My LinkedIn</span></a>
                     </li>
-                    <li><a href="https://www.linkedin.com/in/alexcatus/?locale=fr_FR" target="_blank"
-                            data-i18n="sidebar_linkedin">My LinkedIn</a></li>
                 </ul>
                 <hr>
                 <h3 data-i18n="sidebar_status_title">Status</h3>
