feat: add projects page and persistent radio player

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <a href="gallery.html" data-i18n="nav_art">Art (Paint/Draw)</a>
                 <a href="photography.html" data-i18n="nav_photo">Photography</a>
                 <a href="street-photography.html" data-i18n="nav_street">Street Life</a>
+                <a href="projects.html" data-i18n="nav_projects">Projects</a>
             </nav>
         </header>
 
@@ -68,6 +69,23 @@
                 <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNHJqNGp4ZzRnd3NqZzRnd3NqZzRnd3NqZzRnd3NqZzRnd3NqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1n/3o7TKMGpxP5OqPxF8Q/giphy.gif"
                     alt="Under Construction" style="width: 100px;">
                 <p><small data-i18n="sidebar_construction">Site under construction!</small></p>
+                <hr>
+                <div class="radio-player">
+                    <h3 data-i18n="sidebar_radio_title">Alex's Radio</h3>
+                    <div class="radio-display">
+                        <div class="radio-track-info">
+                            <span data-i18n="sidebar_radio_playing">Now Playing:</span><br>
+                            <marquee behavior="scroll" direction="left" class="radio-track-name">Retro Hits Mix 2026.mp3
+                            </marquee>
+                        </div>
+                    </div>
+                    <div class="radio-controls">
+                        <button class="radio-btn"><i class="fa fa-play"></i></button>
+                        <button class="radio-btn"><i class="fa fa-pause"></i></button>
+                        <button class="radio-btn"><i class="fa fa-stop"></i></button>
+                        <input type="range" class="radio-volume">
+                    </div>
+                </div>
             </aside>
 
             <main class="main-content">
