--- a/gallery.html
+++ b/gallery.html
@@ -38,6 +38,7 @@
                 <a href="gallery.html" data-i18n="nav_art">Art (Paint/Draw)</a>
                 <a href="photography.html" data-i18n="nav_photo">Photography</a>
                 <a href="street-photography.html" data-i18n="nav_street">Street Life</a>
+                <a href="projects.html" data-i18n="nav_projects">Projects</a>
             </nav>
         </header>
 
