--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="index.html" data-i18n="nav_home">Home</a>
                 <a href="gallery.html" data-i18n="nav_art">Art (Paint/Draw)</a>
                 <a href="photography.html" data-i18n="nav_photo">Photography</a>
-                <a href="street-photography.html" data-i18n="nav_street">Street Life</a>
+                <a href="sculpting.html" data-i18n="nav_sculpting">Sculpting</a>
                 <a href="projects.html" data-i18n="nav_projects">Projects</a>
             </nav>
         </header>
