fix: restore navigation in projects page and update tasks

--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,17 @@
     <div class="container">
         <!-- The header/sidebar are kept from the initial load, 
              but we include them for direct page access too. -->
+        <header>
+            <h1 data-i18n="projects_title">IT & Coding Projects</h1>
+            <nav>
+                <a href="index.html" data-i18n="nav_home">Home</a>
+                <a href="gallery.html" data-i18n="nav_art">Art (Paint/Draw)</a>
+                <a href="photography.html" data-i18n="nav_photo">Photography</a>
+                <a href="sculpting.html" data-i18n="nav_sculpting">Sculpting</a>
+                <a href="projects.html" data-i18n="nav_projects">Projects</a>
+            </nav>
+        </header>
+
         <main class="main-content">
             <h2 data-i18n="projects_title">IT & Coding Projects</h2>
             <p data-i18n="projects_intro">When I'm not painting, I'm building things with code.</p>
