feat: add content dating and hosting documentation

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
         <footer class="footer">
             <p data-i18n="footer_copy">&copy; 2026 Alex's Art. All rights reserved.</p>
             <p data-i18n="footer_browser">Best viewed in Netscape Navigator or Internet Explorer 6.0</p>
+            <p><span data-i18n="footer_last_updated">Last Updated:</span> 10 Feb 2026</p>
             <p><span data-i18n="footer_visitors">Visitors:</span> <span class="visitor-counter">000427</span></p>
         </footer>
     </div>
