--- a/projects.html
+++ b/projects.html
@@ -48,6 +48,7 @@
                     <img src="https://via.placeholder.com/200x150/00ff00/000000?text=Portfolio+v1" alt="Project 3">
                     <h3 align="center">Portfolio v1</h3>
                     <p align="center"><small>My first ever website (archived).</small></p>
+                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> Jan 2025</p>
                     <p align="center"><a href="#" class="btn" data-i18n="projects_view_code">View Source</a></p>
                 </div>
             </div>
@@ -56,6 +57,11 @@
                 <a href="index.html" class="btn" data-i18n="gallery_back">Back to Home</a>
             </p>
         </main>
+
+        <footer class="footer" style="padding: 20px 0;">
+            <p data-i18n="footer_copy">&copy; 2026 Alex's Art. All rights reserved.</p>
+            <p><span data-i18n="footer_last_updated">Last Updated:</span> 10 Feb 2026</p>
+        </footer>
     </div>
 </body>
 
