--- a/sculpting.html
+++ b/sculpting.html
@@ -51,14 +51,20 @@
                 <div class="gallery-item">
                     <img src="https://via.placeholder.com/300x400/8b4513/FFFFFF?text=The+Thinker" alt="Sculpture 1">
                     <h3 align="center">The Thinker (Clay)</h3>
+                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 09 Feb 2026
+                    </p>
                 </div>
                 <div class="gallery-item">
                     <img src="https://via.placeholder.com/300x400/708090/FFFFFF?text=Modern+Form" alt="Sculpture 2">
                     <h3 align="center">Modern Form (Steel)</h3>
+                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 10 Feb 2026
+                    </p>
                 </div>
                 <div class="gallery-item">
                     <img src="https://via.placeholder.com/300x400/f5f5dc/000000?text=Echoes" alt="Sculpture 3">
                     <h3 align="center">Echoes (Marble)</h3>
+                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 10 Feb 2026
+                    </p>
                 </div>
             </div>
 
@@ -69,6 +75,7 @@
 
         <footer class="footer">
             <p data-i18n="footer_copy">&copy; 2026 Alex's Art. All rights reserved.</p>
+            <p><span data-i18n="footer_last_updated">Last Updated:</span> 10 Feb 2026</p>
         </footer>
     </div>
 </body>
