feat: finalize content dating and hosting documentation

--- a/gallery.html
+++ b/gallery.html
@@ -51,10 +51,14 @@
                 <div class="gallery-item">
                     <img src="painting_abstract_pastel_1770727576366.png" alt="Painting 1">
                     <p align="center">Morning Dreams</p>
+                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 01 Feb 2026
+                    </p>
                 </div>
                 <div class="gallery-item">
                     <img src="drawing_charcoal_portrait.png" alt="Drawing 1">
                     <p align="center">Soul of the Silent (Charcoal)</p>
+                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 05 Feb 2026
+                    </p>
                 </div>
                 <div class="gallery-item">
                     <img src="painting_placeholder_2.png" alt="Painting 2">
@@ -71,6 +75,7 @@
 
         <footer class="footer">
             <p data-i18n="footer_copy">&copy; 2026 Alex's Art. All rights reserved.</p>
+            <p><span data-i18n="footer_last_updated">Last Updated:</span> 10 Feb 2026</p>
         </footer>
     </div>
 </body>
