--- a/photography.html
+++ b/photography.html
@@ -50,14 +50,20 @@
                 <div class="gallery-item">
                     <img src="photography_landscape_misty.png" alt="Photo 1">
                     <p align="center">Mist Over the Pines</p>
+                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 02 Feb 2026
+                    </p>
                 </div>
                 <div class="gallery-item">
                     <img src="photo_placeholder_2.png" alt="Photo 2">
                     <p align="center">Golden Hour</p>
+                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 03 Feb 2026
+                    </p>
                 </div>
                 <div class="gallery-item">
                     <img src="photo_placeholder_3.png" alt="Photo 3">
                     <p align="center">The Lone Path</p>
+                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 04 Feb 2026
+                    </p>
                 </div>
             </div>
 
@@ -71,14 +77,20 @@
                 <div class="gallery-item">
                     <img src="street_photography_urban_life.png" alt="Street Photography 1">
                     <p align="center">Intersection Rhythm</p>
+                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 06 Feb 2026
+                    </p>
                 </div>
                 <div class="gallery-item">
                     <img src="street_placeholder_2.png" alt="Street Photography 2">
                     <p align="center">Shadows of the Subway</p>
+                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 07 Feb 2026
+                    </p>
                 </div>
                 <div class="gallery-item">
                     <img src="street_placeholder_3.png" alt="Street Photography 3">
                     <p align="center">The Rain Walkers</p>
+                    <p align="center" class="item-date"><span data-i18n="gallery_added_on">Added on:</span> 08 Feb 2026
+                    </p>
                 </div>
             </div>
 
@@ -93,6 +105,7 @@
 
         <footer class="footer">
             <p data-i18n="footer_copy">&copy; 2026 Alex's Art. All rights reserved.</p>
+            <p><span data-i18n="footer_last_updated">Last Updated:</span> 10 Feb 2026</p>
         </footer>
     </div>
 </body>
